--- a/src/components/App/styles.module.css
+++ b/src/components/App/styles.module.css
@@ -22,4 +22,9 @@
   border-radius: 10px;
   background: #F5F5F5;
   margin: auto;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
 }
