--- a/src/components/App/styles.module.css
+++ b/src/components/App/styles.module.css
@@ -22,9 +22,11 @@
   border-radius: 10px;
   background: #F5F5F5;
   margin: auto;
+  padding: 33.3px 34.6px 33.9px;
 
   display: flex;
   flex-direction: column;
+  gap: 25px;
   align-items: center;
   text-align: center;
 }
