--- a/src/components/Header/styles.module.css
+++ b/src/components/Header/styles.module.css
@@ -1,11 +1,18 @@
 .Header__h1 {
+  margin: 0;
   font: bold 25.6px Karla;
   color: #2B283A;
   letter-spacing: -0.768px;
 }
 
 .Header__desc {
+  margin: 0;
+  width: 232.96px;
   font: 13.11px Inter;
   color: #4A4E74;
   letter-spacing: -0.393px;
+}
+
+.Header__desc_frozen {
+  color: #59E391;
 }
