--- a/src/components/Die/styles.module.css
+++ b/src/components/Die/styles.module.css
@@ -13,6 +13,14 @@
   cursor: pointer;
 }
 
+.die:hover {
+  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.25);
+}
+
+.die:active {
+  box-shadow: inset 0px 2px 2px 0px rgba(0, 0, 0, 0.15);
+}
+
 .die_frozen {
   background: #59E391;
 }
