--- a/src/components/App/styles.module.css
+++ b/src/components/App/styles.module.css
@@ -1,32 +1,33 @@
-.App {
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
+html {
+  font-size: 24px;
 }
 
-.main {
-  width: 360px;
-  height: 379px;
+@media (max-width: 600px) {
+  html {
+    font-size: 4vw;
+  }
+}
+
+body {
   display: flex;
-  flex-direction: row;
+  justify-content: center;
   align-items: center;
-  margin: auto;
+  height: 100vh;
   background-color: #0B2434;
 }
 
-.main__inner {
-  width: 320px;
-  height: 320px;
-  border-radius: 10px;
+.main {
+  max-width: 90vw;
+  max-height: 90vh;
+  border-radius: 0.63rem;
   background: #F5F5F5;
   margin: auto;
-  padding: 33.3px 34.6px 33.9px;
+  padding: 1.8rem;
 
   display: flex;
   flex-direction: column;
-  gap: 25px;
+  gap: 1.2rem;
   align-items: center;
   text-align: center;
+
 }
