--- a/src/components/DiceGrid/styles.module.css
+++ b/src/components/DiceGrid/styles.module.css
@@ -1,6 +1,5 @@
 .diceGrid {
   display: grid;
   grid-template: repeat(2, 1fr) / repeat(5, 1fr);
-  column-gap: 17.92px;
-  row-gap: 18.56px;
+  gap: 1.15rem;
 }
