--- a/src/components/Die/styles.module.css
+++ b/src/components/Die/styles.module.css
@@ -1,24 +1,24 @@
 .die {
-  width: 35.84px;
-  height: 35.84px;
-  border-radius: 3.813px;
+  width: 2.25rem;
+  height: 2.25rem;
+  border-radius: 0.25rem;
   border: none;
-  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 0.13rem 0.13rem rgba(0, 0, 0, 0.15);
   color: #2B283A;
   background: #FFF;
   
-  font: bold 20.589px Karla;
+  font: bold 1.3rem Karla;
   text-align: center;
 
   cursor: pointer;
 }
 
 .die:hover {
-  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 0.13rem 0.13rem rgba(0, 0, 0, 0.25);
 }
 
 .die:active {
-  box-shadow: inset 0px 2px 2px 0px rgba(0, 0, 0, 0.15);
+  box-shadow: inset 0 0.13rem 0.13rem rgba(0, 0, 0, 0.15);
 }
 
 .die_frozen {
