--- a/src/components/GameButton/styles.module.css
+++ b/src/components/GameButton/styles.module.css
@@ -1,23 +1,23 @@
 .gameButton {
-  width: 110px;
-  height: 35.84px;
+  width: 7rem;
+  height: 2.25rem;
   background-color: #5035FF;
   color: #FFF;
   font-family: Karla;
-  font-size: 16.384px;
+  font-size: 1rem;
   font-style: normal;
   font-weight: 700;
-  border-radius: 3.81px;
+  border-radius: 0.25rem;
   border: none;
-  box-shadow: 0 3.2px 3.84px #d8d8d8;
+  box-shadow: 0 0.2rem 0.2rem #d8d8d8;
 
   cursor: pointer;
 }
 
 .gameButton:hover {
-  box-shadow: 0 3.2px 3.84px #b1b1b1;
+  box-shadow: 0 0.2rem 0.2rem #b1b1b1;
 }
 
 .gameButton:active {
-  box-shadow: inset 0 3.2px 3.84px #2d1aac;
+  box-shadow: inset 0 0.2rem 0.2rem #2d1aac;
 }
