Replace the @media query with a min() function

--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -1,11 +1,5 @@
 :root {
-  font-size: 24px;
-}
-
-@media (max-width: 600px) {
-  :root {
-    font-size: 4vw;
-  }
+  font-size: min(4vw, 24px);
 }
 
 body {
